# AptiFy

./: README.md  check_output.txt  db.sqlite3  pyproject.toml
analysis/: admin.py  api.py  apps.py  models.py  urls.py  views.py
analysis/services/: inference_engine.py
analysis/templates/analysis/: report.html
aptify/: api.py  auth.py  settings.py  urls.py
assignments/: admin.py  api.py  apps.py  models.py  urls.py  views.py
assignments/migrations/: 0002_assignmentattempt_module2_data_question_concept_tag.py
assignments/services/: scoring_service.py  submission_service.py
assignments/static/assignments/css/: style.css
assignments/static/assignments/js/: api.js
assignments/templates/assignments/: base.html  coding.html  output_guess.html  quiz.html  start.html  summary.html
frontend/templates/: dashboard.html  index.html  intelligence.html  login.html  profile.html  settings.html
frontend/templates/account/: login.html
md/: BACKEND_FRONTEND_FEATURE_INVENTORY.md
scripts/: setup_and_run.sh
users/: api.py  views.py
